# babys-first-electroshock

./: .gitignore
mcugdx/: .gitignore  CMakeLists.txt  README.md  idf_component.yml  project_include.cmake  rofs.sh
mcugdx/examples/audio/: CMakeLists.txt  sdkconfig.defaults
mcugdx/examples/audio/data/: music-stereo.qoa  synth.qoa
mcugdx/examples/audio/main/: CMakeLists.txt  main.cpp  qoa.h
mcugdx/examples/buttons/: CMakeLists.txt
mcugdx/examples/buttons/main/: main.cpp
mcugdx/examples/dinosaur_game/: CMakeLists.txt  convert-data.sh  partitions.csv  sdkconfig.defaults
mcugdx/examples/dinosaur_game/data/: cactus.qoi  cloud.qoi  dino-jump.qoi  dino-run.qoi  grass.qoi  ground.qoi  hill.qoi  music.qoa  pack.qoi  pterodactylus-2.qoi  pterodactylus.qoi  sky.qoi  test.qoi
mcugdx/examples/dinosaur_game/data-raw/: cactus.aseprite  cloud.aseprite  dino-jump.aseprite  dino-run.aseprite  grass.aseprite  ground.aseprite  hill.aseprite  pterodactylus-2.aseprite  pterodactylus.aseprite  sky.aseprite  test.aseprite
mcugdx/examples/dinosaur_game/main/: main.cpp
mcugdx/examples/display/: CMakeLists.txt  convert-data.sh  partitions.csv  qoiconv  sdkconfig.defaults
mcugdx/examples/display/data/: bear.qoi  buffalo.qoi  chick.qoi  chicken.qoi  cow.qoi  crocodile.qoi  dog.qoi  duck.qoi  elephant.qoi  frog.qoi  giraffe.qoi  goat.qoi  gorilla.qoi  hippo.qoi  horse.qoi  monkey.qoi  moose.qoi  narwhal.qoi  owl.qoi  panda.qoi  parrot.qoi  penguin.qoi  pig.qoi  pixels.qoi  rabbit.qoi  rhino.qoi  sloth.qoi  snake.qoi  walrus.qoi  whale.qoi  zebra.qoi
mcugdx/examples/display/main/: CMakeLists.txt  main.cpp
mcugdx/examples/doom/: CMakeLists.txt  nm.txt  partitions.csv  sdkconfig.defaults
mcugdx/examples/doom/main/: CMakeLists.txt  main.c
mcugdx/examples/doom/main/doomgeneric/: d_iwad.c  d_main.c  doomgeneric.c  doomgeneric.h  doomtype.h  i_input.c  i_sound.c  i_sound.h  i_system.c  i_video.c  m_argv.c  m_config.c  m_menu.c  m_misc.c  net_defs.h  p_saveg.c  p_setup.c  r_bsp.c  r_bsp.h  r_draw.c  r_main.c  r_plane.c  r_plane.h  r_segs.c  r_state.h  r_things.c  r_things.h  statdump.c  v_video.c  w_file.c  w_wad.c  wi_stuff.c
mcugdx/examples/gpio/: CMakeLists.txt  sdkconfig.defaults
mcugdx/examples/gpio/main/: CMakeLists.txt  main.cpp
mcugdx/examples/neopixels/: sdkconfig.defaults
mcugdx/examples/neopixels/main/: main.cpp
mcugdx/examples/screaming_cauldron/: CMakeLists.txt  convert-data.sh  convert.sh  package.sh  qoaconv  upload.sh
mcugdx/examples/screaming_cauldron/data/: index.html  scream1.qoa  scream10.qoa  scream11.qoa  scream12.qoa  scream13.qoa  scream14.qoa  scream2.qoa  scream3.qoa  scream4.qoa  scream5.qoa  scream6.qoa  scream7.qoa  scream8.qoa  scream9.qoa
mcugdx/examples/screaming_cauldron/data-raw/alle.logicx/Alternatives/000/: DisplayState.plist  DisplayStateArchive
mcugdx/examples/screaming_cauldron/data-raw/alle.logicx/Media/Audio Files/: Untitled_1#11.aif  scream2#08.aif  scream2#17.aif
mcugdx/examples/screaming_cauldron/data-raw/alle.logicx/Resources/: ProjectInformation.plist
mcugdx/examples/screaming_cauldron/data-raw/elia.logicx/Alternatives/000/: DisplayState.plist  DisplayStateArchive  ProjectData
mcugdx/examples/screaming_cauldron/data-raw/elia.logicx/Media/Audio Files/: Untitled_1#18.aif  Untitled_1#20.aif  Untitled_1#21.aif  scream2#13.aif  scream2#15.aif  scream2#16.aif
mcugdx/examples/screaming_cauldron/data-raw/elia.logicx/Resources/: ProjectInformation.plist
mcugdx/examples/screaming_cauldron/data-raw/emely.logicx/Alternatives/000/: DisplayState.plist  DisplayStateArchive  ProjectData
mcugdx/examples/screaming_cauldron/data-raw/emely.logicx/Media/Audio Files/: Untitled_1#05.aif  Untitled_1#09.aif  Untitled_1#12.aif  scream1#04.aif  scream1#05.aif  scream1#07.aif  scream1#08.aif  scream1#09.aif  scream1#11.aif  scream1#15.aif  scream1#17.aif  scream1#26.aif  scream1#27.aif  scream1#28.aif  scream1#29.aif  scream1#31.aif  scream2#02.aif  scream2#05.aif  scream2#06.aif  scream2#10.aif  scream2#11.aif  scream2#12.aif
mcugdx/examples/screaming_cauldron/data-raw/emely.logicx/Resources/: ProjectInformation.plist
mcugdx/examples/screaming_cauldron/data-raw/fabian-screams.logicx/Alternatives/000/: DisplayState.plist  DisplayStateArchive
mcugdx/examples/screaming_cauldron/data-raw/fabian-screams.logicx/Media/Audio Files/: Untitled_1#08.aif
mcugdx/examples/screaming_cauldron/data-raw/fabian.logicx/Alternatives/000/: DisplayState.plist  DisplayStateArchive  ProjectData
mcugdx/examples/screaming_cauldron/data-raw/fabian.logicx/Media/Audio Files/: Untitled_1#04.aif  Untitled_1#13.aif
mcugdx/examples/screaming_cauldron/data-raw/fabian.logicx/Resources/: ProjectInformation.plist
mcugdx/examples/screaming_cauldron/data-raw/hannah.logicx/Alternatives/000/: MetaData.plist  (+3 more)
mcugdx/examples/screaming_cauldron/data-raw/hannah.logicx/Resources/: ProjectInformation.plist
mcugdx/examples/screaming_cauldron/data-raw/lena.logicx/Resources/: ProjectInformation.plist
mcugdx/examples/screaming_cauldron/docs/: components.md
mcugdx/examples/screaming_cauldron/main/: CMakeLists.txt  config.c  config.h  main.cpp  webserver.c
mcugdx/examples/ultrasonic/: CMakeLists.txt  partitions.csv
mcugdx/examples/ultrasonic/main/: main.cpp
mcugdx/examples/window-opener/: CMakeLists.txt  sdkconfig.defaults
mcugdx/examples/window-opener/data/: index.html
mcugdx/examples/window-opener/main/: bme280.c  bme280.h  config.c  config.h  idf_component.yml  main.cpp  motor.c  motor.h  webserver.c  webserver.h
mcugdx/src/: audio.h  buttons.h  display.h  files.h  gpio.h  image.h  keycodes.h  log.h  mcugdx.h  mem.h  mutex.h  neopixels.h  prefs.h  result.h  time.h  ultrasonic.h
mcugdx/src/common/: audio.c  display.c  files.c  fp16.h  image.c  keycodes.c  mem.c  mutex.c  qoa.h  qoi.h  rofs.c  rofs.h
mcugdx/src/desktop/: audio.c  buttons.c  display.c  log.c  mcugdx.c  mem.c  neopixels.c  prefs.c  sokol_audio.h  time.c  ultrasonic.c
mcugdx/src/esp-idf/: audio.c  buttons.c  display.c  gpio.c  log.c  mcugdx.c  mem.c  neopixels.c  prefs.c  time.c  ultrasonic.c
(+156 files in other folders)
